...
            "state": "translated",
            "value": "Contenuto"
          }
        }
      }
    },
    "Continue as guest": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Continuar como invitado"
          }
...
            "state": "translated",
            "value": "Nuova voce"
          }
        }
      }
    },
    "New task": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nueva tarea"
          }
...
            "state": "translated",
            "value": "Preparazione in corso…"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes"
          }
...
